# AgroManager

./: .gitignore  README.md  cheques.py  database.py  gastos.py  ingresos.py  main.py  makefile  margenes.py  matplotlib_wrapper.py  mercado.py  proveedores.py  pyproject.toml  quickstart.sh  requirements.txt  run.py  superficie.py  tambo.py  utils.py
