[project]
name = "agromanager"
version = "1.0.0"
description = "Sistema de gestión agropecuaria con Kivy"
authors = [
    {name = "AgroManager Team"}
]
readme = "README.md"
requires-python = ">=3.8.1,<3.13"
dependencies = [
    "setuptools>=65.0.0",
    "kivy==2.3.0",
    "kivymd==1.1.1",
    "matplotlib>=3.7.0",
    "requests==2.31.0",
    "kivy-garden==0.1.5",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=7.0.0",
    "pytest>=7.0.0",
]
build = [
    "buildozer>=1.5.0",
    "cython>=0.29.0",
]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']